--- a/HelloWorld/app/src/main/res/values/strings.xml
+++ b/HelloWorld/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HelloWorld</string>
+    <string name="textView2">Pulse aqui</string>
+    <string name="button1">Click aqui</string>
 </resources>
