--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="generar">Generar</string>
+    <string name="name">Name</string>
+    <string name="volver">Volver</string>
 </resources>
